# test_qortex

./: .dev.env  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/catalog/: admin.py  urls.py
src/catalog/api/albums/: request.py  urls.py  views.py
src/catalog/api/albums/service/: album_api_service.py  albums_api_service.py
src/catalog/api/artists/: request.py  response.py  urls.py  views.py
src/catalog/api/artists/service/: artists_api_service.py
src/catalog/api/songs/: request.py  response.py  urls.py  views.py
src/catalog/api/songs/service/: song_api_service.py
src/catalog/enums/: status_code.py
src/catalog/migrations/: 0001_initial.py  0002_alter_albummodel_options_remove_albummodel_title.py  0003_alter_albummodel_options_albummodel_title.py  0004_songmodel_lbums.py  0005_remove_songmodel_lbums_songmodel_albums.py
src/catalog/models/: __init__.py  album_model.py  album_song_model.py  artist_model.py  base_model.py  song_model.py
src/catalog/repos/: album_songs_repository.py  albums_repository.py  artists_repository.py  songs_repository.py
src/catalog/schemas/: album_schemas.py  album_song_schemas.py  artist_schemas.py  song_schemas.py
src/catalog/services/: album_service.py  album_songs_service.py  artists_service.py  songs_service.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
